dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_3444416998.log
== SUBMISSION (2025-09-01 04:39:15)
-- CODE: 
resultado = 30 - (3**2) + ((8 // (3 ** 2 ))* 10)
print( resultado )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:18:09)
-- CODE: 
prin(30 - (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3 ** 2) + (8 // (3 ** 2)) * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3 ** 2) + (8 // (3 ** 2)) * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:35:21)
-- CODE: 
prin(30 - 3(**)2 (+) 8 (//) 3 (** )2 ( * ) 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    prin(30 - 3(**)2 (+) 8 (//) 3 (** )2 ( * ) 10)
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    prin(30 - 3(**)2 (+) 8 (//) 3 (** )2 ( * ) 10)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:36:23)
-- CODE: 
prin(30 - 3**2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3**2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3**2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:38:59)
-- CODE: 
resultado = 30 - (3**2) + ((8 // (3 ** 2 ))* 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:16:09)
-- CODE: 
prin(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:14:52)
-- CODE: 
prin(30 - 3**2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3**2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3**2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:39:02)
-- CODE: 
resultado = 30 - (3**2) + ((8 // (3 ** 2 ))* 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:18:10)
-- CODE: 
prin(30 - (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3 ** 2) + (8 // (3 ** 2)) * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3 ** 2) + (8 // (3 ** 2)) * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:38:21)
-- CODE: 
prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:15:14)
-- CODE: 
prin(30 - 3**2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3**2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - 3**2 + 8 // 3 ** 2 * 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:35:23)
-- CODE: 
prin(30 - 3(**)2 (+) 8 (//) 3 (** )2 ( * ) 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    prin(30 - 3(**)2 (+) 8 (//) 3 (** )2 ( * ) 10)
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    prin(30 - 3(**)2 (+) 8 (//) 3 (** )2 ( * ) 10)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:39:14)
-- CODE: 
resultado = 30 - (3**2) + ((8 // (3 ** 2 ))* 10)
print( resultado )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:38:22)
-- CODE: 
prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(30 - (3**2) + (8() // (3 ** 2 ))* 10)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
